fileserver/nginx-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - http:
    paths:
    - path: /api
      pathType: Prefix
      backend:
        service:
        name: fileserver
        port:
          number: 8080
        # NOTE: this should come after /api or else it will hijack requests
    - path: /
      pathType: Prefix
      backend:
        service:
          name: fileserver
          port:
            number: 80
