fileserver/nginx-ingress-new.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: frontend-ingress
annotations:
kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"frontend-ingress","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"fileserver","servicePort":8080},"path":"/api","pathType":"Prefix"},{"backend":{"service":{"name":"fileserver","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
spec:
rules:
- host: nginx.local
http:
paths:
- path: /api
pathType: Prefix
backend:
service:
name: fileserver
port:
number: 8080
- path: /
pathType: Prefix
backend:
service:
name: fileserver
port:
number: 80
